// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditSettings Renders the component when loaded, with no axe violations 1`] = `
<div
  class="MuiContainer-root makeStyles-container-1 MuiContainer-maxWidthMd"
>
  <h2
    class="MuiTypography-root MuiTypography-h6"
  >
    settings.title
  </h2>
  <div
    class="MuiPaper-root MuiAlert-root MuiAlert-standardWarning makeStyles-alert-2 MuiPaper-elevation0"
    role="alert"
  >
    <div
      class="MuiAlert-icon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
        />
      </svg>
    </div>
    <div
      class="MuiAlert-message"
    >
      settings.betaBanner
    </div>
  </div>
  <div>
    SettingsForm
  </div>
</div>
`;

exports[`EditSettings Renders the component when loading, with no axe violations 1`] = `
<div
  class="MuiContainer-root makeStyles-container-5 MuiContainer-maxWidthMd"
>
  <h2
    class="MuiTypography-root MuiTypography-h6"
  >
    settings.title
  </h2>
  <div
    class="MuiPaper-root MuiAlert-root MuiAlert-standardWarning makeStyles-alert-6 MuiPaper-elevation0"
    role="alert"
  >
    <div
      class="MuiAlert-icon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
        />
      </svg>
    </div>
    <div
      class="MuiAlert-message"
    >
      settings.betaBanner
    </div>
  </div>
  status.general.loading
</div>
`;

exports[`EditSettings Renders the component with error, with no axe violations 1`] = `
<div
  class="MuiContainer-root makeStyles-container-7 MuiContainer-maxWidthMd"
>
  <h2
    class="MuiTypography-root MuiTypography-h6"
  >
    settings.title
  </h2>
  <div
    class="MuiPaper-root MuiAlert-root MuiAlert-standardWarning makeStyles-alert-8 MuiPaper-elevation0"
    role="alert"
  >
    <div
      class="MuiAlert-icon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
        />
      </svg>
    </div>
    <div
      class="MuiAlert-message"
    >
      settings.betaBanner
    </div>
  </div>
  status.general.error
  : 
  you blew it
</div>
`;
